# portal-space

./: README.md  pyproject.toml  setup.py
.github/workflows/: release.yml
portal_space/: __main__.py  game.py
portal_space/cli/: __init__.py  __main__.py
