[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "portal-space"
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Waylon S. Walker", email = "waylon@waylonwalker.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "click",
  "pygame",
]
dynamic = ["version"]

[tool.hatch.metadata]
allow-direct-references = true

[project.urls]
Documentation = "https://github.com/waylonwalker/portal-space#readme"
Issues = "https://github.com/waylonwalker/portal-space/issues"
Source = "https://github.com/waylonwalker/portal-space"

[project.scripts]
portal-space = "portal_space.cli:portal_space"
hi = "portal_space.cli:portal_space"

[tool.hatch.version]
path = "portal_space/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
  "pyinstaller",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=portal_space --cov=tests {args}"
no-cov = "cov --no-cov {args}"
build = "pyinstaller portal_space/cli/__main__.py"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "portal_space/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
